responsiveness and overflow fixed, styling questions still remain... updating styling on the rest of the main page next.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@
   min-height:100vh;
 }
 main{
-   /* background: linear-gradient(#2596be,#032879,#0645ce,#010c24); */
+   overflow: hidden;
 }
 header{
   background-color: #4a8db1;
@@ -56,7 +56,7 @@ header{
 
 
 .gradientbg{
-  background: linear-gradient(#2596be,#032879,#0645ce,#010c24);
+  /* background: linear-gradient(#2596be,#032879,#0645ce,#010c24); */
 }
 
 /*second section*/
@@ -75,10 +75,9 @@ header{
 }
 .aboutbg{
   aspect-ratio: 16/9;
-  background-image: url("/aboutbg4.svg");
+  background-image: url("/lightbg1.svg");
   background-repeat: no-repeat;
   background-size: 100%;
-  
   background-position:center;
   max-width:100%;
   
@@ -104,16 +103,16 @@ header{
   
 }
 @media screen and (max-width:1000px){
-  .aboutbg{
+  /* .aboutbg{
     max-width:100%;
     aspect-ratio:0;
   }
   
  .aboutbg2{
-    max-width:50%;
+    max-width:100%;
     aspect-ratio: 0;
  }
- 
+  */
 }
 
 
